Update SimpleFiles methods to rely on streams over paths